--- a/API_Practice.ipynb
+++ b/API_Practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "30ee7502",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "be248648",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "d60c8df2",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "6729283d",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "7287fa4d",
    "metadata": {},
    "outputs": [],
@@ -74,48 +74,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "baf5ba5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Starting URL for Weather Map API Call.\n",
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "31410c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an endpoint URL for a city.\n",
+    "city_url = url + \"&q=\" + \"Boston\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "2d3ee62b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=84eefd1d97717a27c1d29ceac0f9c720\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Starting URL for Weather Map API Call.\n",
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
+    "# Make a 'Get' request for the city weather.\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "31410c4e",
+   "id": "18d63430",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=84eefd1d97717a27c1d29ceac0f9c720&q=Boston\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<Response [404]>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Boston\"\n",
-    "print(city_url)"
+    "city_url = url + \"&q=\" + \"Bston\"\n",
+    "city_weather = requests.get(city_url)\n",
+    "city_weather"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2d3ee62b",
+   "id": "9236231d",
    "metadata": {},
    "outputs": [
     {
@@ -130,53 +159,6 @@
     }
    ],
    "source": [
-    "# Make a 'Get' request for the city weather.\n",
-    "city_weather = requests.get(city_url)\n",
-    "city_weather"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "18d63430",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [404]>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create an endpoint URL for a city.\n",
-    "city_url = url + \"&q=\" + \"Bston\"\n",
-    "city_weather = requests.get(city_url)\n",
-    "city_weather"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "9236231d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
     "city_weather = requests.get(city_url)\n",
@@ -185,17 +167,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "ad6581e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":51.85,\"feels_like\":49.32,\"temp_min\":49.71,\"temp_max\":53.17,\"pressure\":1024,\"humidity\":55},\"visibility\":10000,\"wind\":{\"speed\":10,\"deg\":0,\"gust\":18.99},\"clouds\":{\"all\":68},\"dt\":1664746912,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1664707334,\"sunset\":1664749484},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":51.28,\"feels_like\":49.39,\"temp_min\":46.38,\"temp_max\":54.23,\"pressure\":1025,\"humidity\":70},\"visibility\":10000,\"wind\":{\"speed\":18.41,\"deg\":60},\"clouds\":{\"all\":100},\"dt\":1664842848,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1664793799,\"sunset\":1664835780},\"timezone\":-14400,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "013f6f28",
    "metadata": {},
    "outputs": [
@@ -215,33 +197,33 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 803,\n",
+       " 'weather': [{'id': 804,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'broken clouds',\n",
-       "   'icon': '04d'}],\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 51.85,\n",
-       "  'feels_like': 49.32,\n",
-       "  'temp_min': 49.71,\n",
-       "  'temp_max': 53.17,\n",
-       "  'pressure': 1024,\n",
-       "  'humidity': 55},\n",
+       " 'main': {'temp': 51.28,\n",
+       "  'feels_like': 49.39,\n",
+       "  'temp_min': 46.38,\n",
+       "  'temp_max': 54.23,\n",
+       "  'pressure': 1025,\n",
+       "  'humidity': 70},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 10, 'deg': 0, 'gust': 18.99},\n",
-       " 'clouds': {'all': 68},\n",
-       " 'dt': 1664746912,\n",
+       " 'wind': {'speed': 18.41, 'deg': 60},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1664842848,\n",
        " 'sys': {'type': 2,\n",
        "  'id': 2013408,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1664707334,\n",
-       "  'sunset': 1664749484},\n",
+       "  'sunrise': 1664793799,\n",
+       "  'sunset': 1664835780},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "0dcfa5ea",
    "metadata": {},
    "outputs": [
@@ -277,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "f7725bfe",
    "metadata": {},
    "outputs": [
@@ -301,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "26104a35",
    "metadata": {},
    "outputs": [
@@ -309,33 +291,33 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 803,\n",
+       " 'weather': [{'id': 804,\n",
        "   'main': 'Clouds',\n",
-       "   'description': 'broken clouds',\n",
-       "   'icon': '04d'}],\n",
+       "   'description': 'overcast clouds',\n",
+       "   'icon': '04n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 51.85,\n",
-       "  'feels_like': 49.32,\n",
-       "  'temp_min': 49.71,\n",
-       "  'temp_max': 53.17,\n",
-       "  'pressure': 1024,\n",
-       "  'humidity': 55},\n",
+       " 'main': {'temp': 51.28,\n",
+       "  'feels_like': 49.39,\n",
+       "  'temp_min': 46.38,\n",
+       "  'temp_max': 54.23,\n",
+       "  'pressure': 1025,\n",
+       "  'humidity': 70},\n",
        " 'visibility': 10000,\n",
-       " 'wind': {'speed': 10, 'deg': 0, 'gust': 18.99},\n",
-       " 'clouds': {'all': 68},\n",
-       " 'dt': 1664746912,\n",
+       " 'wind': {'speed': 18.41, 'deg': 60},\n",
+       " 'clouds': {'all': 100},\n",
+       " 'dt': 1664842848,\n",
        " 'sys': {'type': 2,\n",
        "  'id': 2013408,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1664707334,\n",
-       "  'sunset': 1664749484},\n",
+       "  'sunrise': 1664793799,\n",
+       "  'sunset': 1664835780},\n",
        " 'timezone': -14400,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "faf8a3c8",
    "metadata": {},
    "outputs": [],
@@ -360,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "b76ff248",
    "metadata": {},
    "outputs": [
@@ -370,7 +352,7 @@
        "'US'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "43f0564d",
    "metadata": {},
    "outputs": [
@@ -389,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 53.17 55 68 10\n"
+      "42.3584 -71.0598 54.23 70 100 18.41\n"
      ]
     }
    ],
@@ -405,17 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "ecbc5bd7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-10-02 21:41:52'"
+       "'2022-10-04 00:20:48'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,8 +413,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "8615e63e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10/03/22'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d529d6e",
    "metadata": {},
    "outputs": [],
    "source": []
