--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -1625,22 +1625,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "3f742f37",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=84eefd1d97717a27c1d29ceac0f9c720\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Starting URL for Weather Map API Call.\n",
-    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
-    "print(url)"
+    "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key"
    ]
   },
   {
@@ -2886,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e0f2edfb",
+   "id": "205c48ff",
    "metadata": {},
    "outputs": [
     {
@@ -2926,7 +2917,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5e5f2e8f",
+   "id": "144e9ee3",
    "metadata": {},
    "outputs": [
     {
@@ -2961,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1a7077e5",
+   "id": "70bd45b7",
    "metadata": {},
    "outputs": [
     {
@@ -2996,7 +2987,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b8ed1b77",
+   "id": "e1d6644a",
    "metadata": {},
    "outputs": [
     {
@@ -3031,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fb4f1bf",
+   "id": "c618fe8e",
    "metadata": {},
    "outputs": [],
    "source": []
